@@ -42,11 +42,13 @@
 #import "EcAlarm.h"
 #import "EcProcess.h"
 #import "EcUserDefaults.h"
+#import "EcHost.h"
 
 int
 main()
 {
   NSUserDefaults        *defs;
+  NSDictionary          *dict;
   EcAlarm               *alrm;
   NSArray               *args;
   NSString		*cnam;
@@ -74,6 +76,11 @@ main()
     }
   defs = [NSUserDefaults userDefaultsWithPrefix: pref
                                          strict: EC_DEFAULTS_STRICT];
+  dict = [defs dictionaryForKey: @"WellKnownHostNames"];
+  if (nil != dict)
+    {
+      [NSHost setWellKnownNames: dict];
+    }
 
   args = [[NSProcessInfo processInfo] arguments];
   if ([args containsObject: @"--help"] == YES)
